--- a/internal/view/layout/default.templ
+++ b/internal/view/layout/default.templ
@@ -1,13 +1,14 @@
-package view
+package layout
 
-templ Home() {
+templ DefaultLayout() {
     <!DOCTYPE html>
     <html lang="en">
         <head>
             <title>Guess the Song</title>
+            <script src="https://cdn.tailwindcss.com"></script>
         </head>
         <body>
-            <h1>Guess the Song</h1>
+            { children... }
         </body>
     </html>
 }
