--- a/internal/view/home.templ
+++ b/internal/view/home.templ
@@ -4,6 +4,8 @@ import "github.com/jackcollins434/guess-the-spotify-song/internal/view/layout"
 
 templ Home() {
     @layout.DefaultLayout() {
-        <h1>Test</h1>
+        <div class="flex justify-center pt-10">
+            <h1 class="text-3xl">Guess the Song</h1>
+        </div>
     }
 }
