--- a/internal/view/layout/default.templ
+++ b/internal/view/layout/default.templ
@@ -6,6 +6,14 @@ templ DefaultLayout() {
         <head>
             <title>Guess the Song</title>
             <script src="https://cdn.tailwindcss.com"></script>
+            <link rel="preconnect" href="https://fonts.googleapis.com" />
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+            <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
+            <style>
+                body {
+                    font-family: Inter;
+                }
+            </style>
         </head>
         <body>
             { children... }
