Use Vite, set up tailwind and vite helpers

--- a/internal/view/home.templ
+++ b/internal/view/home.templ
@@ -5,7 +5,7 @@ import "github.com/jackcollins434/guess-the-spotify-song/internal/view/layout"
 templ Home() {
     @layout.DefaultLayout() {
         <div class="flex justify-center pt-10">
-            <h1 class="text-3xl">Guess the Song</h1>
+            <h1 class="hello italic text-2xl">Guess the Song</h1>
         </div>
     }
 }
