--- a/internal/view/layout/default.templ
+++ b/internal/view/layout/default.templ
@@ -1,19 +1,24 @@
 package layout
 
+import "os"
+import "github.com/jackcollins434/guess-the-spotify-song/internal"
+
 templ DefaultLayout() {
     <!DOCTYPE html>
     <html lang="en">
         <head>
+            <meta charset="UTF-8" />
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <title>Guess the Song</title>
-            <script src="https://cdn.tailwindcss.com"></script>
+            @templ.Raw(internal.Vite("js/main.js"))
+
+            if os.Getenv("APP_MODE") == "dev" {
+                <script type="module" src="http://localhost:5173/@vite/client"></script>
+            }
+
             <link rel="preconnect" href="https://fonts.googleapis.com" />
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
             <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
-            <style>
-                body {
-                    font-family: Inter;
-                }
-            </style>
         </head>
         <body>
             { children... }
