--- a/internal/view/layout/default.templ
+++ b/internal/view/layout/default.templ
@@ -11,6 +11,7 @@ templ DefaultLayout() {
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <title>Guess the Song</title>
             @templ.Raw(internal.Vite("js/main.js"))
+            @templ.Raw(internal.Vite("js/react.js"))
 
             if os.Getenv("APP_MODE") == "dev" {
                 <script type="module" src="http://localhost:5173/@vite/client"></script>
@@ -21,6 +22,8 @@ templ DefaultLayout() {
             <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
         </head>
         <body>
+            <div id="react-header"></div>
+            <div id="react-content"></div>
             { children... }
         </body>
     </html>
